<resources>
    <string name="app_name">Fais-moi un dessin</string>
    <string name="modes_de_jeux">Modes de jeux</string>
    <string name="leaderboard">Tableau de classement</string>
    <string name="login">Connexion</string>
    <string name="login_button">Se connecter</string>
    <string name="signup">Inscription</string>
    <string name="signup_button">S\'inscrire</string>
    <string name="username">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="email">Adresse courriel</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="eraser">Efface</string>
    <string name="pencil">Crayon</string>
    <string name="grid">Grille</string>
    <string name="undo">Annuler</string>
    <string name="redo">Refaire</string>
    <string name="message_history">Voir l\'historique</string>
    <string name="show">Afficher</string>
    <string name="create">Créer</string>
    <string name="create_channel">Créer un canal</string>
    <string name="channel_name">Nom du canal</string>
    <string name="find">Trouver</string>
    <string name="find_channel">Trouver un canal</string>
    <string name="join">Joindre</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="veuillez_r_essayer_de_nouveau">Veuillez réessayer de nouveau</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Taille">Taille</string>
    <string name="Couleur_Opacite">Couleur et opacité</string>
    <string name="pixels">px</string>
    <string name="last_color_selected">Dernière couleur</string>
    <string name="Grille">Grille</string>
    <string name="grid_alpha">Transparence de la grille</string>
    <string name="grid_size">Taille des carrés de la grille</string>
    <string name="rank">Rang</string>
    <string name="player_name">Nom du joueur</string>
    <string name="victories">Victoires</string>
    <string name="points">Points</string>
    <string name="classic_victories">Victoires classique</string>
    <string name="played_games">Parties jouées</string>
    <string name="artist_score">Points d\'artiste</string>
    <string name="Avatar">avatar</string>
    <string name="Guess">Deviner</string>
    <string name="Hint">Indice</string>
    <string name="tutorial">Tutoriel</string>
    <string name="title">Titre</string>
    <string name="content">Contenu</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>
    <string name="Join">Rejoindre</string>
    <string name="CreateLobby">Créer un lobby</string>
    <string name="Difficulty">Difficulté</string>
    <string name="Leave">Quitter</string>
    <string name="Players">Joueurs</string>
    <string name="StartGame">Commencer la partie !</string>
    <string name="SprintSolo">Sprint Solo</string>
    <string name="SprintCoop">Sprint Co-Op</string>
    <string name="Classic">Classique</string>
    <string name="BattleRoyale">Battle Royale</string>
    <string name="GameMode">Mode de jeu de la partie</string>
    <string name="EasyDifficulty">Facile</string>
    <string name="MediumDifficulty">Intermédiaire</string>
    <string name="HardDifficulty">Difficile</string>
    <string name="GameDifficulty">Difficulté de la partie</string>
    <string name="Cancel">Annuler</string>
    <string name="CreatingLobby">Création d\'un lobby</string>
    <string name="NumberOfPlayers">Joueurs: %1$d/%2$d</string>
    <string name="LobbyName">Lobby %1$d</string>
    <string name="RoundNumber">Round %1$d/%2$d</string>
    <string name="HintNumber">Indices restants: %1$d/%2$d</string>
    <string name="GuessNumber">Essais restants: %1$d/%2$d</string>
</resources>