<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
         the whole ViewModel, so that we can access the LiveData,
         click handlers, and state variables. -->
    <data>

        <variable
            name="viewModel"
            type="com.example.client_leger.channel.viewModel.ChannelViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".channel.fragment.ChannelFragment">

        <!-- This lesson we will switch to RecyclerView to properly
         display the sleep data-->


        <LinearLayout
            android:id="@+id/channel_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/channel_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/channel_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:text="@={viewModel.channelName}" />

            <Button
                android:id="@+id/create_channel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create"
                android:onClick="@{() -> viewModel.onClickCreateChannel()}"/>


        </LinearLayout>

        <Button
            android:id="@+id/find_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channel_buttons" />
        <!--            -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/channel_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/channel_buttons"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/find_channel" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
